tests/ui/parser/macro/macro-missing-right-paren.stderr
error: this file contains an unclosed delimiter
  --> $DIR/macro-missing-right-paren.rs:3:19
   |
LL | macro_rules! abc(ؼ
   |                 - ^
   |                 |
   |                 unclosed delimiter

error: aborting due to 1 previous error

