tests/ui/parser/macro/macro-missing-right-paren.rs
// ignore-tidy-trailing-newlines
//~v ERROR this file contains an unclosed delimiter
macro_rules! abc(ؼ